examples/macro-tests/tests/fail/03_service_unknown_attr.stderr
error: Unknown service attribute 'timeout'. Supported: priority, tags
 --> tests/fail/03_service_unknown_attr.rs:8:11
  |
8 | #[service(timeout = 30)]
  |           ^^^^^^^
